--- a/store/static/assets/css/components.css
+++ b/store/static/assets/css/components.css
@@ -499,7 +499,7 @@
 	background-repeat: no-repeat;
 }
 .widget_about {
-	background-image: url("../img/icon/map-bg.png");
+	background-image: url("../../../static/assets/img/icon/map-bg.png");
 }
 
 .widget_about .widget-title img {
@@ -527,7 +527,7 @@
 	padding-left: 30px;
 }
 /*.widget_about .address {
-	background-image: url("../images/icon/location-icon.png");	
+	background-image: url("../../../static/assets/img/icon/location-icon.png");
 }*/
 .widget_about svg {
 	fill: #b3aa9b;
@@ -560,7 +560,7 @@
 }
 
 .widget_about .helpline {
-	background-image: url("../img/icon/phone-icon.png");
+	background-image: url("../../../static/assets/img/icon/phone-icon.png");
 }
 
 /* ## widget-list-style ## */
@@ -677,7 +677,7 @@
 }
 
 .widget_search .btn { 
-	/*background-image: url("../images/icon/search-icon.png");*/
+	/*background-image: url("../../../static/assets/img/icon/search-icon.png");*/
 	height: 50px;
 	width: 36px;
 	background-color: transparent;
@@ -882,7 +882,7 @@
 }
 
 .widget_recent_post .nav.bottom-shadow:after {
-	background-image: url("../img/recent-post-shadow.png");
+	background-image: url("../../../static/assets/img/recent-post-shadow.png");
 }
 
 .widget_recent_post .nav li a {
@@ -1051,7 +1051,7 @@
 .price-input select.minimal,
 .product-search-option select.minimal,
 select.minimal {
-	background-image: url("../img/icon/dropdown-arrow.png");
+	background-image: url("../../../static/assets/img/icon/dropdown-arrow.png");
 	background-position:
 		calc(100% - 20px) calc(1em + 2px),
 		calc(100% - 15px) calc(1em + 2px),
