--- a/store/static/assets/css/style.css
+++ b/store/static/assets/css/style.css
@@ -203,7 +203,7 @@ a {
 }
 
 .bottom-shadow:after {
-	background-image: url("../img/shadow.png");
+	background-image: url("../../../static/assets/img/shadow.png");
     background-repeat: no-repeat;
 	background-position: center;
     bottom: 21px;
@@ -268,7 +268,7 @@ a {
 
 .section-header > h3,
 .page-header > h3 {
-	background-image: url("../img/section-header-bg.png");
+	background-image: url("../../../static/assets/img/section-header-bg.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	font-size: 20px;
@@ -290,7 +290,7 @@ a {
 }
 
 .page-header > h3 {
-	background-image: url("../img/page-header-bg.png");
+	background-image: url("../../../static/assets/img/page-header-bg.png");
 	font-size: 30px;
 	font-weight: normal;
 }
@@ -370,11 +370,11 @@ a {
 
 	.top-header .top-social li a > .g-plus,
 	.single-side-widget li a > .g-plus {
-		background-image: url("../img/icon/g-plus.png");
+		background-image: url("../../../static/assets/img/icon/g-plus.png");
 	}
 
 	.single-side-widget li a > .qr-code {
-		background-image: url("../img/icon/qrcode.png");
+		background-image: url("../../../static/assets/img/icon/qrcode.png");
 	}
 
 	.top-header .top-social li a > .g-plus,
@@ -389,11 +389,11 @@ a {
 
 	.top-header .top-social li a:hover > .g-plus,
 	.single-side-widget li a:hover > .g-plus{
-		background-image: url("../img/icon/g-plus-hover.png");
+		background-image: url("../../../static/assets/img/icon/g-plus-hover.png");
 	}
 
 	.single-side-widget li a:hover > .qr-code {
-		background-image: url("../img/icon/qrcode-hover.png");
+		background-image: url("../../../static/assets/img/icon/qrcode-hover.png");
 	}
 
 	.top-header .top-social li a:hover > .g-plus,
@@ -507,7 +507,7 @@ a {
 	}
 
 	.cart-link {
-		/*background-image: url("images/icon/cart-icon.png");
+		/*background-image: url("../../static/assets/img/icon/cart-icon.png");
 		background-repeat: no-repeat;*/
 		color: #b3aa9b;
 		padding-left: 5px;
@@ -604,7 +604,7 @@ a {
     position: absolute;
     width: 100%;
     z-index: 9;
-	background-image: url("../img/slider/shadow.png");
+	background-image: url("../../../static/assets/img/slider/shadow.png");
 	height: 59px;
 }
 
@@ -650,7 +650,7 @@ a {
 	margin: 0;
 	padding: 15px 0 20px 0;
 	color: #b3aa9b;
-	background-image: url("../img/slider/slider-box-title.png");
+	background-image: url("../../../static/assets/img/slider/slider-box-title.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	display: block;
@@ -699,7 +699,7 @@ a {
 	margin-bottom: 15px;
 }
 .category-section .col-md-6 > h4 {
-	background-image: url("../img/slider/slider-box-title.png");
+	background-image: url("../../../static/assets/img/slider/slider-box-title.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 100%;
@@ -959,7 +959,7 @@ a {
 }
 
 .main-product .star li {
-	background-image: url("../img/icon/stars-bg.png");
+	background-image: url("../../../static/assets/img/icon/stars-bg.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	padding: 5px 0;
@@ -1070,7 +1070,7 @@ a {
 }
 
 /*.entry-footer .posted-on {
-	background-image: url("images/blog/calender-icon.png");
+	background-image: url("../../static/assets/img/blog/calender-icon.png");
 }*/
 
 .entry-footer span > a {
@@ -1096,7 +1096,7 @@ a {
 }
 
 /*.entry-footer .comments-link {
-	background-image: url("images/blog/comments-icon.png");
+	background-image: url("../../static/assets/img/blog/comments-icon.png");
 }*/
 
 .entry-footer .comments-link svg {
@@ -1105,7 +1105,7 @@ a {
 }
 
 /*.entry-footer .byline {
-	background-image: url("images/blog/author-icon.png");
+	background-image: url("../../static/assets/img/blog/author-icon.png");
 }*/
 
 .entry-footer .byline svg {
@@ -1218,7 +1218,7 @@ a {
 	width: 100%;
 	border: none;
 	box-shadow: none;
-	/*background-image: url("images/icon/mail-icon.png");
+	/*background-image: url("../../static/assets/img/icon/mail-icon.png");
 	background-repeat: no-repeat;*/
 	padding-left: 25px;
 
@@ -1458,7 +1458,7 @@ a {
 	color: #999;
 	font-weight: normal;
 	display: inline-block;
-	/*background-image: url("images/icon/location-icon.png");
+	/*background-image: url("../../static/assets/img/icon/location-icon.png");
 	background-repeat: no-repeat;*/
 	padding-left: 35px;
 	margin-bottom: 0;
@@ -1508,15 +1508,15 @@ a {
 }
 
 /*.phone-icon {
-	background-image: url("images/icon/phone-icon.png");
+	background-image: url("../../static/assets/img/icon/phone-icon.png");
 }*/
 
 /*.mail-icon {
-	background-image: url("images/icon/mail-icon.png");
+	background-image: url("../../static/assets/img/icon/mail-icon.png");
 }*/
 
 /*.web-icon {
-	background-image: url("images/icon/mail-icon.png");
+	background-image: url("../../static/assets/img/icon/mail-icon.png");
 }*/
 
 .contact-details .drop-line {
@@ -2708,7 +2708,7 @@ input.qtyplus, input.qtyminus {
 }
 
 .single-side-widget {
-	background-image: url("../img/page-header-bg.png");
+	background-image: url("../../../static/assets/img/page-header-bg.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	padding: 20px 0;
