--- a/store/static/assets/libraries/owl-carousel/owl.theme.css
+++ b/store/static/assets/libraries/owl-carousel/owl.theme.css
@@ -20,10 +20,10 @@
 	margin: 0 5px; 
 	text-indent: -9999px;
 }
-.owl-prev {	background-image: url("../../img/icon/prev.png"); }
-.owl-next { 	background-image: url("../../img/icon/next.png"); }
-.owl-prev:hover { background-image: url("../../img/icon/prev-hover.png"); }
-.owl-next:hover { background-image: url("../../img/icon/next-hover.png"); }
+.owl-prev {	background-image: url("../../../../static/assets/img/icon/prev.png"); }
+.owl-next { 	background-image: url("../../../../static/assets/img/icon/next.png"); }
+.owl-prev:hover { background-image: url("../../../../static/assets/img/icon/prev-hover.png"); }
+.owl-next:hover { background-image: url("../../../../static/assets/img/icon/next-hover.png"); }
 .owl-buttons
 {
 	text-align: center;
